<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/margin_small"
        android:gravity="center_horizontal"
        android:textColor="@color/password_title_color"
        android:textSize="@dimen/input_title_text"
        android:textStyle="bold"
        android:text="@string/password_input_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_max"
            android:textColor="@color/app_def_text_color"
            android:textSize="@dimen/text_medium"
            android:text="@string/password_input_message"/>

        <LinearLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_layout_margin"
                android:textColor="@color/app_def_text_color"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"
                android:text="@string/password_input_text"/>

            <EditText
                android:id="@+id/edtInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColor="@color/app_def_text_color"
                android:textSize="@dimen/text_small"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordCheckLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_layout_margin"
                android:textColor="@color/app_def_text_color"
                android:textSize="@dimen/text_small"
                android:textStyle="bold"
                android:text="@string/password_reset_text"/>

            <EditText
                android:id="@+id/edtResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColor="@color/app_def_text_color"
                android:textSize="@dimen/text_small" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRun"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_max"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            style="@style/Widget.AppCompat.Button"
            android:textStyle="bold"
            android:text="@string/password_send_button_text"/>

    </LinearLayout>

</LinearLayout>